--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 
   "dependencies": {
     "@vercel/speed-insights": "^1.2.0",
+    "framer-motion": "^11.3.31",
     "lucide-react": "^0.542.0",
     "nodemon": "^3.1.10",
     "react": "^19.1.1",
