--- a/package.json
+++ b/package.json
@@ -3,24 +3,23 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-"scripts": {
-  "dev": "vite",
-  "build": "vite build",
-  "lint": "eslint .",
-  "preview": "vite preview",
-  "build:hero": "vite build --outDir components/hero --config vite.hero.config.js",
-  "build:main": "rimraf dist && vite build --outDir dist --config vite.main.config.js && node scripts/after-main-build.mjs"
-},
-
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "lint": "eslint .",
+    "preview": "vite preview",
+    "build:hero": "vite build --outDir components/hero --config vite.hero.config.js",
+    "build:main": "rimraf dist && vite build --outDir dist --config vite.main.config.js && node scripts/after-main-build.mjs"
+  },
   "dependencies": {
     "@vercel/speed-insights": "^1.2.0",
-    "framer-motion": "^11.3.31",
+    "@vitejs/plugin-react": "^5.0.0",
+    "framer-motion": "^11.18.2",
     "lucide-react": "^0.542.0",
     "nodemon": "^3.1.10",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.8.0",
-    "@vitejs/plugin-react": "^5.0.0",
     "vite": "^7.1.2"
   },
   "devDependencies": {
@@ -33,7 +32,7 @@
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
     "postcss": "^8.5.6",
-    "tailwindcss": "^3.4.4",
-    "rimraf": "^6.0.1"
+    "rimraf": "^6.0.1",
+    "tailwindcss": "^3.4.4"
   }
 }
