--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "build:main": "rimraf dist && vite build --outDir dist --config vite.main.config.js && node scripts/after-main-build.mjs"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.57.1",
     "@vercel/speed-insights": "^1.2.0",
     "@vitejs/plugin-react": "^5.0.0",
     "framer-motion": "^11.18.2",
