--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "build:main": "rimraf dist && vite build --outDir dist --config vite.main.config.js && node scripts/after-main-build.mjs"
   },
   "dependencies": {
-    "@supabase/supabase-js": "^2.57.1",
+    "@supabase/supabase-js": "^2.57.2",
     "@vercel/speed-insights": "^1.2.0",
     "@vitejs/plugin-react": "^5.0.0",
     "framer-motion": "^11.18.2",
@@ -21,6 +21,7 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.8.0",
+    "supabase": "^2.39.2",
     "vite": "^7.1.2"
   },
   "devDependencies": {
