--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "globals": "^16.3.0",
     "postcss": "^8.5.6",
     "rimraf": "^6.0.1",
-    "tailwindcss": "^3.4.4"
+    "tailwindcss": "^3.4.4",
+    "terser": "^5.44.0"
   }
 }
