--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "build:main": "rimraf dist && vite build --outDir dist --config vite.main.config.js && node scripts/after-main-build.mjs"
   },
   "dependencies": {
+    "@emotion/babel-plugin": "^11.13.5",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
     "@supabase/supabase-js": "^2.57.1",
     "@vercel/speed-insights": "^1.2.0",
     "@vitejs/plugin-react": "^4.3.4",
@@ -20,16 +23,18 @@
     "framer-motion": "^10.18.0",
     "lucide-react": "^0.264.0",
     "nodemon": "^3.1.10",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.3",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-router": "6.22.3",
+    "react-router-dom": "6.22.3",
     "react-toastify": "^11.0.5",
-    "vite": "^7.1.2"
+    "vite": "^5.2.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
+    "@types/react-router-dom": "^5.3.3",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.33.0",
     "eslint-plugin-react-hooks": "^5.2.0",
