--- a/package.json
+++ b/package.json
@@ -12,15 +12,16 @@
     "build:main": "rimraf dist && vite build --outDir dist --config vite.main.config.js && node scripts/after-main-build.mjs"
   },
   "dependencies": {
-    "@emotion/babel-plugin": "^11.13.5",
-    "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.1",
+    "@emotion/babel-plugin": "^11.11.0",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@supabase/supabase-js": "^2.57.1",
     "@vercel/speed-insights": "^1.2.0",
     "@vitejs/plugin-react": "^4.3.4",
     "axios": "^1.11.0",
     "dompurify": "^3.2.6",
     "framer-motion": "^10.18.0",
+    "hoist-non-react-statics": "^3.3.2",
     "lucide-react": "^0.264.0",
     "nodemon": "^3.1.10",
     "react": "18.2.0",
