--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   },
   "dependencies": {
     "@emotion/babel-plugin": "^11.11.0",
-    "@emotion/react": "^11.11.1",
+    "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "@rollup/plugin-commonjs": "^25.0.4",
+    "@rollup/plugin-node-resolve": "^15.2.3",
     "@supabase/supabase-js": "^2.57.1",
     "@vercel/speed-insights": "^1.2.0",
     "@vitejs/plugin-react": "^4.3.4",
@@ -29,7 +31,7 @@
     "react-router": "6.22.3",
     "react-router-dom": "6.22.3",
     "react-toastify": "^11.0.5",
-    "vite": "^5.2.0"
+    "vite": "^5.0.12"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
