--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,7 @@
       "src": "package.json",
       "use": "@vercel/static-build",
       "config": {
-        "distDir": "dist",
+        "distDir": "build",
         "zeroConfig": true
       }
     }
@@ -14,8 +14,7 @@
     {
       "src": "/assets/(.*)",
       "headers": {
-        "cache-control": "public, max-age=31536000, immutable",
-        "Content-Type": "application/javascript"
+        "cache-control": "public, max-age=31536000, immutable"
       }
     },
     {
