--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,10 +1,17 @@
 {
   "version": 2,
-  "name": "chat-homeswift-ai",
+  "name": "homeswift-backend",
   "builds": [
     {
       "src": "server.js",
-      "use": "@vercel/node"
+      "use": "@vercel/node",
+      "config": {
+        "includeFiles": [
+          "**/*.js",
+          "**/*.json",
+          "**/*.mjs"
+        ]
+      }
     }
   ],
   "routes": [
@@ -15,6 +22,7 @@
   ],
   "env": {
     "NODE_ENV": "production",
-    "CORS_ORIGIN": "https://homeswift-ai.vercel.app,https://chat-homeswift-ai.vercel.app"
-  }
+    "CORS_ORIGIN": "https://homeswift-ai.vercel.app,https://homeswift-ai-backend.vercel.app"
+  },
+  "buildCommand": "npm install && npm run db:migrate"
 }
