--- a/server/package.json
+++ b/server/package.json
@@ -26,6 +26,7 @@
     "axios": "^1.11.0",
     "bcryptjs": "^2.4.3",
     "canvas": "^3.2.0",
+    "connect-redis": "^9.0.0",
     "connect-session-sequelize": "^7.1.7",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
@@ -36,6 +37,7 @@
     "express-validator": "^7.0.1",
     "faker": "^5.5.3",
     "helmet": "^7.1.0",
+    "ioredis": "^5.7.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
