--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@getbrevo/brevo": "^3.0.1",
     "@sendgrid/mail": "^8.1.0",
+    "@supabase/supabase-js": "^2.57.4",
     "axios": "^1.11.0",
     "bcryptjs": "^2.4.3",
     "canvas": "^3.2.0",
