--- a/.env
+++ b/.env
@@ -24,7 +24,7 @@ SUPABASE_DB_HOST=aws-1-eu-west-2.pooler.supabase.com
 SUPABASE_DB_PORT=6543
 SUPABASE_DB_NAME=postgres
 SUPABASE_DB_USER=postgres.tproaiqvkohrlxjmkgxt
-SUPABASE_DB_PASSWORD=8y4gVz1FkHj9mN2b
+SUPABASE_DB_PASSWORD=homeswift.ai
 
 # ================
 # Supabase Configuration (Backend)
