--- a/server/.env
+++ b/server/.env
@@ -5,19 +5,19 @@ NODE_ENV=production
 # Frontend URL for CORS
 FRONTEND_URL=http://localhost:5173
 
-# Local Database (for development)
-DB_HOST=localhost
+# Database Configuration for Development
+DB_HOST=db.tproaiqvkohrlxjmkgxt.supabase.co
 DB_PORT=5432
-DB_NAME=homeswift
+DB_NAME=postgres
 DB_USER=postgres
-DB_PASSWORD=homeswift123
+DB_PASSWORD=homeswift.ai
 
-# Supabase Database (for production/staging)
+# Supabase Connection Pool (for production/staging)
 SUPABASE_DB_HOST=aws-1-eu-west-2.pooler.supabase.com
 SUPABASE_DB_PORT=6543
 SUPABASE_DB_NAME=postgres
 SUPABASE_DB_USER=postgres.tproaiqvkohrlxjmkgxt
-SUPABASE_DB_PASSWORD=8y4gVz1FkHj9mN2b
+SUPABASE_DB_PASSWORD=homeswift.ai
 
 # Supabase Configuration
 SUPABASE_URL=https://tproaiqvkohrlxjmkgxt.supabase.co
