--- a/vercel.json
+++ b/vercel.json
@@ -14,9 +14,18 @@
     }
   ],
   "routes": [
-    { "src": "/api/(.*)", "dest": "/server/server.js" },
-    { "src": "/(.*)", "dest": "/$1" }
+    {
+      "src": "/api/(.*)",
+      "dest": "/server/server.js"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/$1"
+    }
   ],
+  "env": {
+    "NODE_ENV": "production"
+  },
   "github": {
     "enabled": true,
     "autoAlias": true,
