--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@rollup/plugin-commonjs": "^25.0.4",
     "@rollup/plugin-node-resolve": "^15.2.3",
-    "@supabase/supabase-js": "^2.57.4",
+    "@supabase/ssr": "^0.5.0",
+    "@supabase/supabase-js": "^2.39.0",
     "@vercel/speed-insights": "^1.2.0",
     "@vitejs/plugin-react": "^4.3.4",
     "axios": "^1.11.0",
@@ -48,6 +49,7 @@
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
     "@types/react-router-dom": "^5.3.3",
+    "@types/cookie": "^0.5.1",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.33.0",
     "eslint-plugin-react-hooks": "^5.2.0",
