--- a/server/package.json
+++ b/server/package.json
@@ -10,10 +10,19 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.39.0",
+    "@supabase/ssr": "^0.5.0",
+    "bcryptjs": "^2.4.3",
+    "pg": "^8.11.3",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.37.1",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-rate-limit": "^7.1.5",
+    "express-validator": "^7.0.1",
     "helmet": "^7.0.0",
+    "http-errors": "^2.0.0",
     "morgan": "^1.10.0",
     "node-fetch": "^2.6.7",
     "jsonwebtoken": "^9.0.0"
@@ -22,6 +31,6 @@
     "nodemon": "^2.0.20"
   },
   "engines": {
-    "node": ">=14.0.0"
+    "node": ">=22.16.0"
   }
 }
