--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,10 @@
-# Frontend Environment Variables
-VITE_API_BASE_URL=https://your-app.vercel.app/api
+# Frontend Environment Variables (Vite)
+VITE_APP_URL=http://localhost:5173
+VITE_SUPABASE_URL=your-supabase-project-url
+VITE_SUPABASE_ANON_KEY=your-supabase-anon-key
+
+# API Configuration
+VITE_API_BASE_URL=http://localhost:5001/api
 VITE_GOOGLE_CLIENT_ID=your-google-client-id
 VITE_MAPBOX_ACCESS_TOKEN=your-mapbox-token
 
