--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,14 @@
-# Frontend Environment Variables (Vite)
-VITE_APP_URL=http://localhost:5173
-VITE_SUPABASE_URL=your-supabase-project-url
-VITE_SUPABASE_ANON_KEY=your-supabase-anon-key
+# ================
+# Supabase Configuration (Required)
+# ================
+VITE_SUPABASE_URL=your_supabase_project_url
+VITE_SUPABASE_ANON_KEY=your_supabase_anon_key
 
-# API Configuration
-VITE_API_BASE_URL=http://localhost:5001/api
+# ================
+# Frontend Environment Variables
+# ================
+VITE_FRONTEND_URL=http://localhost:5173
+VITE_API_BASE_URL=https://your-app.vercel.app/api
 VITE_GOOGLE_CLIENT_ID=your-google-client-id
 VITE_MAPBOX_ACCESS_TOKEN=your-mapbox-token
 
