--- a/package.json
+++ b/package.json
@@ -9,60 +9,45 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "build:hero": "vite build --outDir components/hero --config vite.hero.config.js",
-    "build:main": "rimraf dist && vite build --outDir dist --config vite.main.config.js && node scripts/after-main-build.mjs",
-    "build:landing": "rimraf dist/landing && vite build --outDir dist/landing --config vite.landing.config.js"
+    "build:main": "rimraf dist && vite build --outDir dist --config vite.main.config.js && node scripts/after-main-build.mjs"
   },
   "dependencies": {
-    "@emotion/cache": "^11.11.0",
-    "@emotion/react": "^11.11.0",
-    "@emotion/styled": "^11.11.0",
-    "@mui/material": "^5.14.0",
-    "@radix-ui/react-slot": "^1.2.3",
-    "@rollup/plugin-commonjs": "^25.0.4",
-    "@rollup/plugin-node-resolve": "^15.2.3",
-    "@supabase/ssr": "^0.5.0",
-    "@supabase/supabase-js": "^2.39.0",
+    "@emotion/babel-plugin": "^11.13.5",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@rollup/plugin-commonjs": "^25.0.8",
+    "@rollup/plugin-node-resolve": "^15.3.1",
+    "@supabase/supabase-js": "^2.57.4",
     "@vercel/speed-insights": "^1.2.0",
-    "@vitejs/plugin-react": "^4.3.4",
-    "axios": "^1.11.0",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
+    "@vitejs/plugin-react": "^4.7.0",
+    "axios": "^1.12.2",
     "dompurify": "^3.2.6",
     "framer-motion": "^10.18.0",
     "hoist-non-react-statics": "^3.3.2",
     "lucide-react": "^0.264.0",
     "nodemon": "^3.1.10",
-    "pg": "^8.11.3",
+    "pg": "^8.16.3",
     "pg-hstore": "^2.3.4",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-router": "6.22.3",
-    "react-router-dom": "6.22.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router": "^6.22.3",
+    "react-router-dom": "^6.22.3",
     "react-toastify": "^11.0.5",
-    "tailwind-merge": "^3.3.1",
-    "vite": "^5.0.12"
+    "vite": "^5.4.20"
   },
   "devDependencies": {
-    "@babel/plugin-transform-react-jsx": "^7.27.1",
-    "@emotion/babel-plugin": "^11.13.5",
-    "@eslint/js": "^9.33.0",
-    "@tailwindcss/aspect-ratio": "^0.4.2",
-    "@tailwindcss/forms": "^0.5.10",
-    "@tailwindcss/typography": "^0.5.16",
-    "@types/cookie": "^0.5.1",
-    "@types/react": "^18.2.55",
-    "@types/react-dom": "^18.2.19",
+    "@eslint/js": "^9.35.0",
+    "@types/react": "^18.3.24",
+    "@types/react-dom": "^18.3.7",
     "@types/react-router-dom": "^5.3.3",
     "autoprefixer": "^10.4.21",
-    "eslint": "^9.33.0",
+    "eslint": "^9.35.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
-    "globals": "^16.3.0",
+    "globals": "^16.4.0",
     "postcss": "^8.5.6",
-    "postcss-nesting": "^13.0.2",
     "rimraf": "^6.0.1",
-    "tailwindcss": "^3.4.4",
-    "tailwindcss-animate": "^1.0.7",
+    "tailwindcss": "^3.4.17",
     "terser": "^5.44.0"
   }
 }
