--- a/server/package.json
+++ b/server/package.json
@@ -5,8 +5,9 @@
   "description": "HomeSwift server application",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "start": "NODE_ENV=production node server.js",
+    "start:win": "set NODE_ENV=production&& node server.js"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.39.0",
