--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "pg-hstore": "^2.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.6.0",
     "react-router": "^6.22.3",
     "react-router-dom": "^6.22.3",
     "react-toastify": "^11.0.5",
