--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-navigation-menu": "^1.2.13",
+    "@radix-ui/react-slider": "^1.3.6",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-tabs": "^1.1.12",
     "@rollup/plugin-commonjs": "^25.0.8",
     "@rollup/plugin-node-resolve": "^15.3.1",
@@ -37,6 +39,7 @@
     "date-fns": "^3.6.0",
     "dompurify": "^3.2.6",
     "framer-motion": "^10.18.0",
+    "history": "^5.3.0",
     "hoist-non-react-statics": "^3.3.2",
     "lucide-react": "^0.462.0",
     "next-themes": "^0.3.0",
@@ -50,6 +53,7 @@
     "react-hot-toast": "^2.6.0",
     "react-router": "^6.30.1",
     "react-router-dom": "^6.30.1",
+    "react-swipeable": "^7.0.2",
     "react-toastify": "^11.0.5",
     "recharts": "^2.15.4",
     "sonner": "^1.7.4",
