--- a/server/package.json
+++ b/server/package.json
@@ -1,37 +1,55 @@
 {
-  "name": "homeswift-server",
+  "name": "homeswift-backend",
   "version": "1.0.0",
-  "type": "module",
-  "description": "HomeSwift server application",
+  "description": "Backend API for HomeSwift real estate platform",
   "main": "server.js",
+  "type": "module",
   "scripts": {
-    "dev": "nodemon server.js",
-    "start": "NODE_ENV=production node server.js",
-    "start:win": "set NODE_ENV=production&& node server.js"
+    "start": "node --experimental-specifier-resolution=node server.js",
+    "dev": "nodemon --experimental-specifier-resolution=node server.js",
+    "db:migrate": "sequelize-cli db:migrate",
+    "db:seed": "sequelize-cli db:seed:all",
+    "db:setup": "npm run db:migrate && npm run db:seed",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [
+    "real-estate",
+    "api",
+    "express",
+    "nodejs"
+  ],
+  "author": "HomeSwift Team",
+  "license": "MIT",
   "dependencies": {
-    "@supabase/supabase-js": "^2.39.0",
-    "@supabase/ssr": "^0.5.0",
+    "@getbrevo/brevo": "^3.0.1",
+    "@sendgrid/mail": "^8.1.0",
+    "@supabase/supabase-js": "^2.57.4",
+    "axios": "^1.11.0",
     "bcryptjs": "^2.4.3",
-    "pg": "^8.11.3",
-    "pg-hstore": "^2.3.4",
-    "sequelize": "^6.37.1",
+    "canvas": "^3.2.0",
+    "connect-session-sequelize": "^7.1.7",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
+    "dotenv": "^16.6.1",
     "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
+    "express-session": "^1.17.3",
     "express-validator": "^7.0.1",
-    "helmet": "^7.0.0",
-    "http-errors": "^2.0.0",
+    "faker": "^5.5.3",
+    "helmet": "^7.1.0",
+    "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
-    "node-fetch": "^2.6.7",
-    "jsonwebtoken": "^9.0.0"
+    "multer": "^1.4.5-lts.1",
+    "node-fetch": "^2.7.0",
+    "nodemailer": "^7.0.6",
+    "pg": "^8.16.3",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.35.2",
+    "sib-api-v3-sdk": "^8.5.0",
+    "sqlite3": "^5.1.7"
   },
   "devDependencies": {
-    "nodemon": "^2.0.20"
-  },
-  "engines": {
-    "node": ">=22.16.0"
+    "nodemon": "^3.0.2",
+    "sequelize-cli": "^6.6.2"
   }
 }
