--- a/vercel.chat.json
+++ b/vercel.chat.json
@@ -11,16 +11,6 @@
       }
     }
   ],
-  "routes": [
-    {
-      "src": "/auth/callback",
-      "dest": "/index.html"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/index.html"
-    }
-  ],
   "env": {
     "NODE_ENV": "production",
     "FRONTEND_URL": "https://chat.homeswift.co"
@@ -42,5 +32,7 @@
         }
       ]
     }
-  ]
+  ],
+  "cleanUrls": true,
+  "trailingSlash": false
 }
