Update CORS settings and enhance API server with root and favicon endpoints, along with improved 404 error handling for both API and non-API routes.

--- a/server/vercel.json
+++ b/server/vercel.json
@@ -22,7 +22,7 @@
   ],
   "env": {
     "NODE_ENV": "production",
-    "CORS_ORIGIN": "https://homeswift-ai.vercel.app,https://homeswift-ai-backend.vercel.app"
+    "CORS_ORIGIN": "https://homeswift.co,https://chat.homeswift.co,https://homeswift-ai.vercel.app,https://homeswift-ai-backend.vercel.app"
   },
   "buildCommand": "npm install && npm run db:migrate"
 }
