--- a/vercel.json
+++ b/vercel.json
@@ -1,17 +1,17 @@
 {
   "version": 2,
   "builds": [
-    {
-      "src": "package.json",
-      "use": "@vercel/static-build",
-      "config": {
+    { "src": "server/server.js", "use": "@vercel/node" },
+    { 
+      "src": "package.json", 
+      "use": "@vercel/static-build", 
+      "config": { 
         "distDir": "dist",
         "buildCommand": "npm run build"
-      }
+      } 
     }
   ],
   "routes": [
-    { "src": "/api/(.*)", "dest": "https://api.homeswift.co/api/$1" },
     { "handle": "filesystem" },
     { "src": "/.*", "dest": "/index.html" }
   ],
