Implement routing for chat subdomain and enhance 404 handling
- Added a route in vercel.json to serve the index.html for requests to the chat subdomain (chat.homeswift.co).
- Updated server.js to handle requests for the chat subdomain, serving the frontend appropriately.
- Implemented a 404 handler to return a JSON response for unmatched routes.

--- a/vercel.json
+++ b/vercel.json
@@ -38,6 +38,16 @@
     },
     {
       "src": "^/(.*)",
+      "has": [
+        {
+          "type": "host",
+          "value": "chat.homeswift.co"
+        }
+      ],
+      "dest": "/index.html"
+    },
+    {
+      "src": "^/(.*)",
       "dest": "/index.html"
     }
   ],
