--- a/vercel.json
+++ b/vercel.json
@@ -1,54 +1,71 @@
 {
   "version": 2,
   "builds": [
-    { "src": "server/server.js", "use": "@vercel/node" },
+    { 
+      "src": "server/server.js", 
+      "use": "@vercel/node" 
+    },
+    { 
+      "src": "package.json", 
+      "use": "@vercel/static-build", 
+      "config": { 
+        "distDir": "dist/chat",
+        "buildCommand": "npm run build:chat"
+      },
+      "routes": [
+        {
+          "src": "^/api/(.*)",
+          "dest": "/server/server.js"
+        },
+        {
+          "src": "/static/(.*)",
+          "dest": "/static/$1"
+        },
+        {
+          "src": "/assets/(.*)",
+          "dest": "/assets/$1"
+        },
+        {
+          "src": "/favicon.ico",
+          "dest": "/favicon.ico"
+        },
+        {
+          "src": "/robots.txt",
+          "dest": "/robots.txt"
+        },
+        {
+          "src": "/sitemap.xml",
+          "dest": "/sitemap.xml"
+        },
+        {
+          "src": "/(.*)",
+          "has": [
+            {
+              "type": "host",
+              "value": "chat.homeswift.co"
+            }
+          ],
+          "dest": "/index.html"
+        }
+      ]
+    },
     { 
       "src": "package.json", 
       "use": "@vercel/static-build", 
       "config": { 
         "distDir": "dist",
         "buildCommand": "npm run build"
-      } 
-    }
-  ],
-  "rewrites": [
-    {
-      "source": "/api/(.*)",
-      "destination": "/server/server.js"
-    },
-    {
-      "source": "/static/(.*)",
-      "destination": "/static/$1"
-    },
-    {
-      "source": "/assets/(.*)",
-      "destination": "/assets/$1"
-    },
-    {
-      "source": "/favicon.ico",
-      "destination": "/favicon.ico"
-    },
-    {
-      "source": "/robots.txt",
-      "destination": "/robots.txt"
-    },
-    {
-      "source": "/sitemap.xml",
-      "destination": "/sitemap.xml"
-    },
-    {
-      "source": "/(.*)",
-      "has": [
+      },
+      "routes": [
         {
-          "type": "host",
-          "value": "chat.homeswift.co"
+          "src": "^/api/(.*)",
+          "dest": "/server/server.js"
+        },
+        {
+          "src": "/(.*)",
+          "dest": "/index.html"
         }
-      ],
-      "destination": "/index.html"
-    },
-    {
-      "source": "/(.*)",
-      "destination": "/index.html"
+      ]
     }
   ],
   "headers": [
