--- a/vercel.json
+++ b/vercel.json
@@ -9,9 +9,9 @@
       "src": "package.json", 
       "use": "@vercel/static-build", 
       "config": { 
-        "distDir": "dist/chat",
+        "distDir": "dist",
         "buildCommand": "npm run build:chat"
-      } 
+      }
     }
   ],
   "rewrites": [
