Update build configuration and styling for chat application
- Modified the build command in package.json to specify the output directory for the chat build.
- Updated Vercel configuration to reflect the new build command and distribution directory.
- Enhanced styling in HeroSection component for improved background image presentation.

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "build:chat": "vite build --config vite.chat.config.js --mode chat",
+    "build:chat": "vite build --config vite.chat.config.js --mode chat --outDir dist/chat",
     "lint": "eslint .",
     "preview": "vite preview",
     "setup-supabase": "node setup-supabase.js",
