Refactor Vercel configuration for build process
- Updated the build command to 'npm run build' and changed the distribution directory to 'dist' for a more streamlined build structure.

--- a/vercel.json
+++ b/vercel.json
@@ -9,8 +9,8 @@
       "src": "package.json", 
       "use": "@vercel/static-build", 
       "config": {
-        "distDir": "dist/chat",
-        "buildCommand": "npm run build:chat"
+        "distDir": "dist",
+        "buildCommand": "npm run build"
       }
     }
   ],
