Refactor Vercel configuration for routing and output settings
- Updated routing syntax in vercel.json to use 'rewrites' instead of 'routes' for better alignment with Vercel's conventions.
- Simplified routing entries and added output settings for standalone deployment.
- Enabled clean URLs for improved user experience.

--- a/vercel.json
+++ b/vercel.json
@@ -14,50 +14,28 @@
       }
     }
   ],
-  "routes": [
+  "rewrites": [
     {
-      "src": "/api/(.*)",
-      "dest": "/server/server.js"
+      "source": "/api/(.*)",
+      "destination": "/server/server.js"
     },
     {
-      "src": "/_next/static/(.*)",
-      "dest": "/_next/static/$1"
-    },
-    {
-      "src": "/static/(.*)",
-      "dest": "/static/$1"
-    },
-    {
-      "src": "/assets/(.*)",
-      "dest": "/assets/$1"
-    },
-    {
-      "src": "/favicon.ico",
-      "dest": "/favicon.ico"
-    },
-    {
-      "src": "/robots.txt",
-      "dest": "/robots.txt"
-    },
-    {
-      "src": "/sitemap.xml",
-      "dest": "/sitemap.xml"
-    },
-    {
-      "src": "/(.*)",
+      "source": "/(.*)",
       "has": [
         {
           "type": "host",
           "value": "chat.homeswift.co"
         }
       ],
-      "dest": "/index.html"
+      "destination": "/"
     },
     {
-      "src": "/(.*)",
-      "dest": "/index.html"
+      "source": "/(.*)",
+      "destination": "/"
     }
   ],
+  "output": "standalone",
+  "cleanUrls": true,
   "headers": [
     {
       "source": "/(.*)",
