Update Vercel configuration to specify index.html as the destination for all routes
- Changed the destination for routing in vercel.json from '/' to '/index.html' for improved handling of requests.
- Ensured consistent routing behavior across all defined paths.

--- a/vercel.json
+++ b/vercel.json
@@ -27,14 +27,13 @@
           "value": "chat.homeswift.co"
         }
       ],
-      "destination": "/"
+      "destination": "/index.html"
     },
     {
       "source": "/(.*)",
-      "destination": "/"
+      "destination": "/index.html"
     }
   ],
-  "output": "standalone",
   "cleanUrls": true,
   "headers": [
     {
