Enhance build and server configurations in package.json and Vercel settings
- Updated package.json to include new scripts for chat and landing builds, and improved development server settings.
- Refined Vercel configuration to correct routing syntax and enhance security headers.
- Adjusted Content-Security-Policy and CORS settings for better access control and security compliance.

--- a/package.json
+++ b/package.json
@@ -4,14 +4,20 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
+    "dev:chat": "vite --config vite.chat.config.js --mode chat --host",
     "build": "vite build",
     "build:chat": "vite build --config vite.chat.config.js --mode chat --outDir dist/chat",
-    "lint": "eslint .",
-    "preview": "vite preview",
+    "build:landing": "vite build --mode production --outDir dist/landing",
+    "preview": "vite preview --port 3000 --host",
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
+    "typecheck": "tsc --noEmit",
     "setup-supabase": "node setup-supabase.js",
     "setup-db": "node setup-database.js",
-    "server": "cd server && node server.js"
+    "server": "node server/server.js",
+    "start": "vite preview --port 3000 --host",
+    "deploy": "vercel --prod",
+    "deploy:chat": "vercel --prod --env CHAT_MODE=true"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
