Refactor Vercel configuration to simplify routing and improve destination handling
- Consolidated routing entries in vercel.json by merging host conditions into a single line.
- Changed the destination for the primary route from '/index.html' to '/' for better request handling.

--- a/vercel.json
+++ b/vercel.json
@@ -19,12 +19,9 @@
     {
       "source": "/(.*)",
       "has": [
-        {
-          "type": "host",
-          "value": "chat.homeswift.co"
-        }
+        { "type": "host", "value": "chat.homeswift.co" }
       ],
-      "destination": "/index.html"
+      "destination": "/"
     },
     { "source": "/(.*)", "destination": "/index.html" }
   ],
