Enhance Vercel configuration with improved routing and environment handling
- Added host conditions for API routing to ensure proper request handling based on the hostname.
- Updated the destination for the primary route to '/index.html' for better compatibility with static hosting.
- Introduced environment variable checks and site URL determination in supabase.js for improved deployment flexibility.
- Configured cookie options for authentication to enhance security across different environments.

--- a/vercel.json
+++ b/vercel.json
@@ -1,29 +1,55 @@
 {
   "version": 2,
   "builds": [
-    { 
-      "src": "package.json", 
+    {
+      "src": "package.json",
       "use": "@vercel/static-build",
-      "config": { 
-        "distDir": "dist",
-        "buildCommand": "npm run build"
+      "config": {
+        "distDir": "dist"
       }
     },
-    { 
-      "src": "server/server.js", 
+    {
+      "src": "server/server.js",
       "use": "@vercel/node"
     }
   ],
   "rewrites": [
-    { "source": "/api/(.*)", "destination": "/server/server.js" },
+    {
+      "source": "/api/(.*)",
+      "has": [
+        { "type": "host", "value": "api.homeswift.co" }
+      ],
+      "destination": "/server/server.js"
+    },
     {
       "source": "/(.*)",
       "has": [
         { "type": "host", "value": "chat.homeswift.co" }
       ],
-      "destination": "/"
+      "destination": "/index.html"
     },
-    { "source": "/(.*)", "destination": "/index.html" }
+    {
+      "source": "/(.*)",
+      "has": [
+        { "type": "host", "value": "homeswift.co" },
+        { "type": "host", "value": "www.homeswift.co" }
+      ],
+      "destination": "/index.html"
+    },
+    { 
+      "source": "/(.*)",
+      "destination": "/index.html" 
+    }
+  ],
+  "redirects": [
+    {
+      "source": "/",
+      "has": [
+        { "type": "host", "value": "www.homeswift.co" }
+      ],
+      "destination": "https://homeswift.co",
+      "permanent": true
+    }
   ],
   "cleanUrls": true,
   "headers": [
