Update server configuration and enhance Vercel settings for improved functionality
- Refactored server package.json to change the project name, version, and scripts for better clarity and functionality.
- Added build commands in vercel.json for chat and main builds to streamline deployment processes.
- Enhanced server.js with Winston logging for better error tracking and debugging.
- Updated App.jsx to improve route handling and added a new TestConnection page for testing API connectivity.

--- a/server/package.json
+++ b/server/package.json
@@ -1,74 +1,41 @@
 {
-    "name": "homeswift-ai",
-    "private": true,
-    "version": "0.0.0",
-    "type": "module",
-    "scripts": {
-        "dev": "nodemon --experimental-specifier-resolution=node server.js",
-        "build": "vite build",
-        "build:chat": "vite build --config vite.chat.config.js --mode chat",
-        "lint": "eslint .",
-        "preview": "vite preview",
-        "setup-supabase": "node setup-supabase.js",
-        "setup-db": "node setup-database.js",
-        "server": "cd server && node server.js"
-    },
-    "dependencies": {
-        "@emotion/react": "^11.11.3",
-        "@emotion/styled": "^11.11.0",
-        "@hookform/resolvers": "^3.3.4",
-        "@radix-ui/react-dialog": "^1.0.5",
-        "@radix-ui/react-slider": "^1.3.6",
-        "@radix-ui/react-switch": "^1.2.6",
-        "@radix-ui/react-tabs": "^1.1.13",
-        "@supabase/supabase-js": "^2.58.0",
-        "@tanstack/react-query": "^5.17.19",
-        "axios": "^1.12.2",
-        "bcryptjs": "^3.0.2",
-        "class-variance-authority": "^0.7.1",
-        "clsx": "^2.1.1",
-        "cookie-parser": "^1.4.7",
-        "cors": "^2.8.5",
-        "dotenv": "^17.2.2",
-        "express": "^5.1.0",
-        "express-rate-limit": "^8.1.0",
-        "express-session": "^1.18.2",
-        "express-validator": "^7.2.1",
-        "framer-motion": "^10.16.16",
-        "helmet": "^8.1.0",
-        "history": "^5.3.0",
-        "jsonwebtoken": "^9.0.2",
-        "lucide-react": "^0.544.0",
-        "morgan": "^1.10.1",
-        "nodemailer": "^7.0.6",
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0",
-        "react-hook-form": "^7.49.3",
-        "react-router-dom": "^6.20.1",
-        "react-swipeable": "^7.0.2",
-        "sonner": "^1.4.2",
-        "tailwind-merge": "^3.3.1",
-        "zod": "^3.22.4"
-    },
-    "devDependencies": {
-        "@types/node": "^20.10.5",
-        "@types/react": "^18.2.45",
-        "@types/react-dom": "^18.2.18",
-        "@typescript-eslint/eslint-plugin": "^6.13.2",
-        "@typescript-eslint/parser": "^6.13.2",
-        "@vitejs/plugin-react": "^4.2.1",
-        "autoprefixer": "^10.4.16",
-        "eslint": "^8.55.0",
-        "eslint-config-prettier": "^9.1.0",
-        "eslint-plugin-import": "^2.29.0",
-        "eslint-plugin-jsx-a11y": "^6.8.0",
-        "eslint-plugin-react": "^7.33.2",
-        "eslint-plugin-react-hooks": "^4.6.0",
-        "nodemon": "^3.1.10",
-        "postcss": "^8.4.32",
-        "tailwindcss": "^3.4.0",
-        "terser": "^5.44.0",
-        "typescript": "^5.3.3",
-        "vite": "^5.0.10"
-    }
+  "name": "homeswift-backend",
+  "version": "1.0.0",
+  "description": "HomeSwift Backend API",
+  "main": "server.js",
+  "type": "module",
+  "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon --experimental-specifier-resolution=node server.js",
+    "migrate": "npx sequelize-cli db:migrate",
+    "seed": "npx sequelize-cli db:seed:all",
+    "setup-db": "npm run migrate && npm run seed",
+    "lint": "eslint .",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "dependencies": {
+    "@supabase/supabase-js": "^2.39.0",
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
+    "morgan": "^1.10.1",
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^7.0.6",
+    "sequelize": "^6.32.1",
+    "sqlite3": "^5.1.6",
+    "uuid": "^9.0.0",
+    "winston": "^3.10.0"
+  },
+  "devDependencies": {
+    "eslint": "^8.55.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.29.0",
+    "nodemon": "^3.1.10",
+    "sequelize-cli": "^6.6.1"
+  },
+  "engines": {
+    "node": ">=16.0.0"
+  }
 }
