Update Vercel configuration to use custom build scripts for deployment
- Changed the source for main and chat builds in vercel.json from package.json and vite.chat.config.js to vercel-build.sh and vercel-build-chat.sh, respectively, to streamline the build process.

--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "version": 2,
   "builds": [
     {
-      "src": "package.json",
+      "src": "vercel-build.sh",
       "use": "@vercel/static-build",
       "config": {
         "distDir": "dist",
@@ -10,7 +10,7 @@
       }
     },
     {
-      "src": "vite.chat.config.js",
+      "src": "vercel-build-chat.sh",
       "use": "@vercel/static-build",
       "config": {
         "distDir": "dist/chat",
