Enhance server and package configurations for improved functionality
- Added new scripts in package.json for server management, including development, build, and migration commands.
- Updated server package.json to include a build script and additional dependencies for better performance and security.
- Refined render.yaml to streamline the build and start commands for the server, ensuring proper installation of dependencies.

--- a/package.json
+++ b/package.json
@@ -12,10 +12,14 @@
     "preview": "vite preview --port 3000 --host",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
     "typecheck": "tsc --noEmit",
+    "server:dev": "cd server && npm run dev",
+    "server:start": "cd server && npm start",
+    "server:build": "cd server && npm run build",
+    "server:migrate": "cd server && npm run migrate",
+    "server:seed": "cd server && npm run seed",
+    "server:setup-db": "cd server && npm run setup-db",
     "setup-supabase": "node setup-supabase.js",
     "setup-db": "node setup-database.js",
-    "server": "node server/server.js",
-    "start": "vite preview --port 3000 --host",
     "deploy": "vercel --prod",
     "deploy:chat": "vercel --prod --env CHAT_MODE=true"
   },
