--- a/server/render.yaml
+++ b/server/render.yaml
@@ -3,8 +3,23 @@ services:
     name: homeswift-backend
     env: node
     region: oregon  # Choose the region closest to your users
-    buildCommand: npm install
-    startCommand: node --experimental-specifier-resolution=node server.js
+    buildCommand: |
+      # Install root dependencies
+      npm install
+      
+      # Install server dependencies
+      cd server
+      npm install
+      
+      # Build the application
+      npm run build
+      
+      # Return to root directory
+      cd ..
+      
+    startCommand: |
+      cd server
+      node --experimental-specifier-resolution=node server.js
     envVars:
       - key: NODE_ENV
         value: production
