Update Vite configuration and package scripts for improved development experience
- Modified the 'dev' script in package.json to allow dynamic port assignment.
- Added alias resolution in vite.config.js for cleaner import paths.
- Adjusted server configuration to allow port changes if the default is in use, enhancing flexibility during development.

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite --host",
+    "dev": "vite --host --port 0",
     "dev:chat": "vite --config vite.chat.config.js --mode chat --host",
     "build": "vite build",
     "build:chat": "vite build --config vite.chat.config.js --mode chat --outDir dist/chat",
