Enhance routing and configuration for chat subdomain support
- Added rewrites in vercel.json to handle static assets and redirect chat subdomain requests to the appropriate index page.
- Updated Vite configuration to set the base path for production to '/chat/'.
- Modified App component to conditionally render ChatRoutes for the chat subdomain, improving routing logic and user experience.

--- a/vercel.json
+++ b/vercel.json
@@ -24,6 +24,21 @@
   ],
   "rewrites": [
     {
+      "source": "/_next/static/(.*)",
+      "destination": "/_next/static/$1"
+    },
+    {
+      "source": "/static/(.*)",
+      "destination": "/static/$1"
+    },
+    {
+      "source": "/(.*)",
+      "has": [
+        { "type": "host", "value": "chat.homeswift.co" }
+      ],
+      "destination": "/chat/index.html"
+    },
+    {
       "source": "/api/(.*)",
       "has": [
         { "type": "host", "value": "api.homeswift.co" }
