Update build scripts and configuration for improved deployment process
- Refactored package.json scripts to streamline build and test commands, including the addition of cross-env for environment variable management.
- Enhanced vercel-build.sh to ensure consistent dependency installation and conditional chat application build based on environment.
- Updated vercel.json to simplify build commands and improve routing for static assets.
- Modified vite.chat.config.js to ensure proper environment variable handling and optimized build settings for production.

--- a/package.json
+++ b/package.json
@@ -5,16 +5,16 @@
   "type": "module",
   "scripts": {
     "dev": "vite --host --port 0",
-    "dev:chat": "vite --config vite.chat.config.js --mode chat --host",
     "build": "vite build",
-    "build:chat": "vite build --config vite.chat.config.js --mode chat --outDir dist/chat",
-    "build:landing": "vite build --mode production --outDir dist/landing",
-    "preview": "vite preview --port 3000 --host",
-    "lint": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
-    "typecheck": "tsc --noEmit",
-    "server:dev": "cd server && npm run dev",
-    "server:start": "cd server && npm start",
-    "server:build": "cd server && npm run build",
+    "build:chat": "cross-env VITE_APP_MODE=chat vite build --config vite.chat.config.js",
+    "preview": "vite preview",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "test:run": "vitest run",
+    "test:coverage": "vitest run --coverage",
+    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+    "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
+    "vercel-build": "npm run build && npm run build:chat",
     "server:migrate": "cd server && npm run migrate",
     "server:seed": "cd server && npm run seed",
     "server:setup-db": "cd server && npm run setup-db",
