Update build scripts and vercel configuration for improved deployment process
- Changed the build:chat script to use cross-env-shell for better compatibility.
- Modified vercel-build command to ensure dependencies are installed before building.
- Updated vercel.json to streamline build and install commands, specifying node version for consistency.

--- a/vercel.json
+++ b/vercel.json
@@ -6,22 +6,13 @@
       "use": "@vercel/static-build",
       "config": {
         "distDir": "dist",
-        "zeroConfig": false
-      }
-    },
-    {
-      "src": "vite.chat.config.js",
-      "use": "@vercel/static-build",
-      "config": {
-        "distDir": "dist/chat"
+        "nodeVersion": "18.x"
       }
     }
   ],
-  "build": {
-    "env": {
-      "NODE_VERSION": "18.x"
-    }
-  },
+  "buildCommand": "npm run vercel-build",
+  "installCommand": "npm install",
+  "framework": "vite",
   "rewrites": [
     { "source": "/assets/(.*)", "destination": "/assets/$1" },
     { "source": "/api/(.*)", "destination": "/api/$1" },
